# isic-project-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 55f73d32b341_add_domain_models_for_semesters_.py  __init__.py  a1b2c3d4e5f6_add_isics_table_and_foreign_key.py  b2c3d4e5f6a7_make_first_name_and_last_name_nullable.py  f2e7dd1f048d_initial_migration_create_isic_scans_.py
src/: __init__.py  config.py  main.py
src/api/: attendance.py  auth.py  dependencies.py  export.py  lessons.py  routes.py  schedule.py  schemas.py  semesters.py  students.py  subjects.py  weeks.py
src/api/schemas/: __init__.py  attendance.py  base.py  enrollment.py  lesson.py  schedule.py  semester.py  subject.py  week.py
src/database/: connection.py
src/models/: __init__.py  attendance.py  enrollment.py  isic.py  lesson.py  scan.py  schedule_entry.py  semester.py  subject.py  user.py  week_note.py
src/mqtt/: __init__.py  client.py  handler.py
src/services/: attendance_service.py  auth_service.py  csv_parser.py  enrollment_service.py  export_service.py  lesson_service.py  scan_service.py  schedule_service.py  semester_service.py  subject_service.py
tests/: conftest.py  test_attendance.py  test_auth.py  test_e2e_full.py  test_e2e_mqtt.py  test_enrollment.py  test_export.py  test_models.py  test_scan_attendance.py  test_semester_schedule.py
tests/helpers/: mqtt_simulator.py
