[project]
name = "isic-project-backend"
version = "0.1.0"
description = "Backend for ISIC student identification system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "sqlalchemy>=2.0.41",
    "aiosqlite>=0.20.0",
    "aiomqtt>=2.1.0",
    "pydantic-settings>=2.9.1",
    "pydantic>=2.8.2",
    "alembic>=1.14.0",
    "loguru>=0.7.3",
    "greenlet>=3.2.4",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "python-multipart>=0.0.9",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
    "mypy>=1.17.0",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "testcontainers>=4.9.0",
    "httpx>=0.27.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    # E - pycodestyle errors
    "E1",
    "E4",
    "E7",
    "E9",
    "W1",
    "W2",
    "W5",
    "W6",
    "W291",
    "W292",
    "W505",
    "F",
    "I",
    "N",
    "B",
    "C4",
    "UP",
    "RUF",
]

ignore = ["W293"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = false
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openpyxl.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:testcontainers",
]
